--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "files-contents-to-txt",
-  "version": "1.1.0",
+  "version": "1.1.3",
   "description": "CLI tools for exporting file contents",
   "main": "dist/index.js",
   "bin": {
@@ -16,8 +16,8 @@
     "build": "tsc",
     "pkg": "npm run build && pkg dist/index.js -t node16-linux-x64,node16-macos-x64,node16-win-x64 -o bin/files-contents-to-txt",
     "link": "npm run pkg && npm link",
-    "bump-version": "npm version minor",
-    "publish": "npm run bump-version && npm run link && npm publish --access public"
+    "bump-version": "npm version patch --no-git-tag-version",
+    "publishPkg": "npm run bump-version && npm run link && npm publish --access public"
   },
   "dependencies": {
     "@types/minimatch": "^5.1.2",
